--- a/kolibri/views/datatable.tt
+++ b/kolibri/views/datatable.tt
@@ -72,7 +72,8 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td></tr>
+            <td></td>
+          </tr>
           </tfoot>
         </table>
       </div>
@@ -86,7 +87,7 @@
 
     jQuery.fn.dataTable.Api.register('sum()', function () {
       return this.flatten().reduce(function (a, b) {
-        
+
         if (typeof a === 'string') {
           a = a.replace(/[^\d.-]/g, '') * 1;
         }
@@ -99,9 +100,7 @@
       }, 0);
     });
 
-    
-    var table_id = '[% table_id %]';
-    jQuery('#' + table_id).dataTable({
+    var datatable_options = $.extend({
       dom     : 'lB<"clear">frtip',
       buttons : ['excel', 'pdf',
         {
@@ -109,55 +108,10 @@
           text  : 'Показати/заховати кол.'
         }
       ],
-      language: {
-        "sProcessing"  : "Зачекайте...",
-        "sLengthMenu"  : "Показати _MENU_ записів",
-        "sZeroRecords" : "Записи відсутні.",
-        
-        "sInfo"        : "Записи з _START_ по _END_ із _TOTAL_ записів",
-        "sInfoEmpty"   : "Записи з 0 по 0 із 0 записів",
-        "sInfoFiltered": "(відфільтровано з _MAX_ записів)",
-        "sInfoPostFix" : "",
-        "sSearch"      : "Пошук:",
-        "sUrl"         : "",
-        "oPaginate"    : {
-          "sFirst"   : "Перша",
-          "sPrevious": "Попередня",
-          "sNext"    : "Наступна",
-          "sLast"    : "Остання"
-        },
-        "oAria"        : {
-          "sSortAscending" : ": активувати для сортування стовпців за зростанням",
-          "sSortDescending": ": активувати для сортування стовпців за спаданням"
-        }
-      },
-      "footerCallback": function (row, data, start, end, display) {
-        var api = this.api(), data;
+      language: window['DATATABLE_LANGUAGE']
+    }, window['DATATABLE_OPTIONS']);
 
-        try {
-          // Remove the formatting to get integer data for summation
-          var intVal = function (i) {
-            return typeof i === 'string' ?
-                i.replace(/[\$,]/g, '') * 1 :
-                typeof i === 'number' ?
-                    i : 0;
-          };
-
-          // Total over this page
-          var pageTotal = api
-              .column(8, {page: 'current'})
-              .data()
-              .reduce(function (a, b) {
-                return intVal(a) + intVal(b);
-              }, 0);
-
-          // Update footer
-          $(api.column(8).footer()).html(pageTotal);
-        }
-        catch (Error){
-          console.log(Error)
-        }
-      }
-    });
-  })
+    var table_id = '[% table_id %]';
+    jQuery('#' + table_id).dataTable(datatable_options)
+  });
 </script>
